popular images UI fixed but not responsive

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -198,23 +198,69 @@ $red: #aa1004;
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow: hidden;
+  // overflow: hidden;
   width: 95%;
   position: relative;
   z-index: 0;
+  .PopularTitle {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: 90px 0px 50px 0px;
+  }
   .popularMoviesList {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     width: 100%;
+
     .imageContainer {
+      border-radius: 5px;
+      position: relative;
+      .imageShader {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(
+          to bottom,
+          rgba(0, 0, 0, 0),
+          rgba(0, 0, 0, 1)
+        );
+        opacity: 0;
+        transition: opacity 0.3s ease;
+      }
+      &:hover .imageShader {
+        opacity: 1;
+      }
+      & svg {
+        color: $themeWhite;
+        font-size: 30px;
+      }
       & img {
         margin: 20px 0px;
         object-fit: contain;
         border-radius: 5px;
       }
+      .infoButton {
+        position: absolute;
+        top: 10%;
+        left: 10px;
+      }
+      .watch {
+        position: absolute;
+        top: 10%;
+        right: 0%;
+      }
+      & p {
+        position: absolute;
+        bottom: 0px;
+        left: 5px;
+        width: 100%;
+        font-weight: 500;
+      }
     }
   }
+
   .popularImageSlider {
     display: flex;
     animation: scrollImages 550s linear infinite;
